@@ -1,3 +1,7 @@
+2021-12-29  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* examples/procedural_texture.rb: Added
+
 2021-12-26  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/shaders_raymarching.rb: Added
